force-app/main/default/objects/Airplane_2__c/Airplane_2__c.object-meta.xml
<CustomObject>
    <label>Airplane 2</label>
    <nameField>
        <displayFormat>Aero-{000}</displayFormat>
        <label>Aeroplane ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Airplanes 2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>