force-app/main/default/objects/Airplane_2__c/fields/Airline_2__c.field-meta.xml
<CustomField>
    <fullName>Airline_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airline 2</label>
    <referenceTo>Airline_2__c</referenceTo>
    <relationshipLabel>Airplanes 2</relationshipLabel>
    <relationshipName>Airplanes_2</relationshipName>
    <type>Lookup</type>
</CustomField>