force-app/main/default/objects/Airplane_2__c/fields/Airline_ID__c.field-meta.xml
<CustomField>
    <fullName>Airline_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airline ID</label>
    <referenceTo>Airline_2__c</referenceTo>
    <relationshipLabel>Airplanes 2 (Airline ID)</relationshipLabel>
    <relationshipName>Airplanes_21</relationshipName>
    <type>Lookup</type>
</CustomField>